# xorr-zk-stellar

./: .gitignore  AUDIT.md  README.md  dev-stack.sh
.claude/: launch.json
stellar-privacy/: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  deploy.testnet.env
stellar-privacy/backend/: .env.example  README.md  package-lock.json  package.json
stellar-privacy/circuits/: package.json  (+1 more)
xorr-core/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
xorr-landing/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
xorr-landing-page/: package-lock.json  package.json
xorr-stellar-contracts/: .gitignore  ARCHITECTURE.md  LENDING_DEPLOYMENT.md  LICENSE  Makefile  README.md
xorr-stellar-contracts/contracts/: Cargo.toml
xorr-stellar-contracts/contracts/amm/: Cargo.toml
xorr-stellar-contracts/contracts/amm/src/: lib.rs  test.rs
xorr-stellar-contracts/contracts/bridge/src/: lib.rs  test.rs
xorr-stellar-contracts/contracts/lending/: Cargo.toml
xorr-stellar-contracts/contracts/lending/src/: lib.rs  test.rs
xorr-stellar-contracts/contracts/mock-verifier/: Cargo.toml
xorr-stellar-contracts/contracts/pool-factory/: Cargo.toml
xorr-stellar-contracts/contracts/pool-factory/src/: lib.rs  test.rs
xorr-stellar-contracts/contracts/privacy-pool/: Cargo.toml
xorr-stellar-contracts/contracts/privacy-pool/src/: lib.rs  test.rs
xorr-stellar-contracts/contracts/verifier/: Cargo.toml
xorr-stellar-contracts/contracts/verifier/src/: lib.rs
xorr-stellar-contracts/contracts/zk-interface/src/: lib.rs
(+221 files in other folders)
