[workspace]
resolver = "2"
members = [
    "zk-interface",
    "verifier",
    "privacy-pool",
    "bridge",
    "mock-verifier",
    "amm",
    "pool-factory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = "25.1.0"
zk-interface = { path = "zk-interface" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
