[package]
name = "verifier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true
zk-interface.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
